<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorIcons"
        tools:context=".viewcontrollers.activities.RegisterActivity"
        tools:showIn="@layout/activity_register">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/backgroundImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >
        <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_face_aquamarine_24dp"
                android:drawablePadding="@dimen/padding_8"
                android:fontFamily="@font/questrial"
                android:hint="@string/name_text"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toTopOf="@+id/emailEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6"
                app:layout_constraintVertical_chainStyle="packed"/>

        <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/questrial"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:layout_marginTop="@dimen/margin_8"
                android:drawableStart="@drawable/ic_email_aquamarine_24dp"
                android:drawablePadding="@dimen/padding_8"
                app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/questrial"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:layout_marginTop="@dimen/margin_8"
                android:drawableStart="@drawable/ic_lock_aquamarine_24dp"
                android:drawablePadding="@dimen/padding_8"
                app:layout_constraintBottom_toTopOf="@+id/passwordConfirmEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <EditText
                android:id="@+id/passwordConfirmEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_text"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/questrial"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:layout_marginTop="@dimen/margin_8"
                android:drawableStart="@drawable/ic_lock_aquamarine_24dp"
                android:drawablePadding="@dimen/padding_8"
                app:layout_constraintBottom_toTopOf="@+id/registerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_text"
                android:textSize="@dimen/text_size_14"
                android:fontFamily="@font/questrial"
                android:layout_marginTop="@dimen/margin_8"
                android:textStyle="bold"
                android:textColor="@color/colorIcons"
                android:background="@drawable/main_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditText" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/petmatch_back"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

</android.support.constraint.ConstraintLayout>