<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_16">

        <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <android.support.constraint.ConstraintLayout
                android:id="@+id/createPetLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/formPettLayout">

            <ImageView
                    android:id="@+id/petSymbolImage"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/collar_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/petLayoutText"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:fontFamily="@font/questrial"
                    android:text="@string/create_pet_title"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/petSymbolImage" />

            <TextView
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8"
                    android:fontFamily="@font/questrial"
                    android:text="@string/create_pet_subtitle"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/petLayoutText" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/formPettLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createPetLayout"
                app:layout_constraintBottom_toBottomOf="parent">

                <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:drawableStart="@drawable/ic_pets_aquamarine_24dp"
                        android:drawablePadding="@dimen/padding_8"
                        android:fontFamily="@font/questrial"
                        android:hint="@string/pet_name_text"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorSecondaryText"
                        android:textSize="@dimen/text_size_14"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.6" />

                <Spinner
                        android:id="@+id/genreSpinner"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:drawablePadding="@dimen/padding_8"
                        android:fontFamily="@font/questrial"
                        android:hint="@string/genre_text"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorSecondaryText"
                        android:textSize="@dimen/text_size_14"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/nameEditText"
                        app:layout_constraintVertical_bias="0.6" />

                <Spinner
                        android:id="@+id/typeSpinner"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:drawablePadding="@dimen/padding_8"
                        android:fontFamily="@font/questrial"
                        android:hint="@string/type_text"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorSecondaryText"
                        android:textSize="@dimen/text_size_14"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/genreSpinner"
                        app:layout_constraintVertical_bias="0.6" />

                    <EditText
                            android:id="@+id/birthDateEditText"
                            android:layout_marginTop="@dimen/margin_8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorAccent"
                            android:drawablePadding="@dimen/padding_8"
                            android:fontFamily="@font/questrial"
                            android:inputType="textPersonName"
                            android:hint="Date of Birth"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorSecondaryText"
                            android:textSize="@dimen/text_size_14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/typeSpinner"
                    />

                    <EditText
                            android:id="@+id/aboutEditText"
                            android:layout_marginTop="@dimen/margin_8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorAccent"
                            android:drawablePadding="@dimen/padding_8"
                            android:fontFamily="@font/questrial"
                            android:inputType="textPersonName"
                            android:hint="@string/about_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorSecondaryText"
                            android:textSize="@dimen/text_size_14"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/birthDateEditText"/>

            <Button
                    android:id="@+id/buttonChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:fontFamily="@font/questrial"
                    android:text="@string/choose_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/aboutEditText" />

            <EditText
                    android:id="@+id/imageNameEditText"
                    android:layout_width="@dimen/size_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:backgroundTint="@color/colorAccent"
                    android:drawableStart="@drawable/ic_image_aquamarine_24dp"
                    android:drawablePadding="@dimen/padding_8"
                    android:enabled="false"
                    android:fontFamily="@font/questrial"
                    android:hint="@string/picture_text"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_size_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buttonChoose"
                    app:layout_constraintTop_toBottomOf="@id/aboutEditText" />
            <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/questrial"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/create_pet_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageNameEditText" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
</ScrollView>